# openGL-cpp-glad

./: CMakeLists.txt  Dependency.cmake
shader/: lighting-1.fs  lighting-1.vs  lighting-1b.fs  lighting-2.fs  lighting-3.fs  lighting.fs  lighting.vs  shader_lighting-1.c  shader_lighting-2.c  shader_lighting-3.c  shader_lighting.c  shader_simple.c  simple.fs  simple.vs  texture-1.vs  texture.fs
src/: ColoredTriangle.cpp  ImGui.cpp  KeyboardInputReshape.cpp  Light-1.cpp  MouseControl.cpp  Object-1.cpp  Object-2.cpp  ProjrctionView.cpp  RotatingCube.cpp  RotatingCubes.cpp  Texture.cpp  Texture2.cpp  Texture3.cpp  Texture4.cpp  Transform.cpp  basicWindow.cpp  drawSinglePoint.cpp  lightingTexture.cpp  main.cpp  main240505.cpp  main240529.cpp  main240531.cpp  main240603.cpp  mainColoredTriangle.cpp  mainImGui.cpp  mainKeyboardInputReshape.cpp  mainMouseControl.cpp  mainObject-1.cpp  mainObject-2.cpp  mainRotatingCube.cpp  mainRotatingCubes.cpp  mainTexture.cpp  mainTexture2.cpp  mainTexture3.cpp  mainTexture4.cpp  mainTransform.cpp
